--- a/app/src/main/res/layout/activity_first_floor_route.xml
+++ b/app/src/main/res/layout/activity_first_floor_route.xml
@@ -7,11 +7,9 @@
     tools:context=".FirstFloorRouteActivity">
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/topFloor"
         android:layout_width="392dp"
         android:layout_height="587dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,69 +17,23 @@
         app:srcCompat="@drawable/firstfloor3" />
 
     <ImageView
-        android:id="@+id/zoneEightStart"
+        android:id="@+id/greenPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="160dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/zoneeightstartpin" />
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/topFloor"
+        app:layout_constraintEnd_toStartOf="@+id/topFloor"
+        app:layout_constraintStart_toStartOf="@+id/topFloor"
+        app:layout_constraintTop_toTopOf="@+id/topFloor"
+        app:srcCompat="@drawable/redpintwo" />
 
     <ImageView
-        android:id="@+id/zoneEightEnd"
+        android:id="@+id/redPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="108dp"
-        android:layout_marginTop="236dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.064"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048"
-        app:srcCompat="@drawable/zoneeightendpin" />
+        app:layout_constraintStart_toStartOf="@+id/topFloor"
+        app:layout_constraintTop_toTopOf="@+id/topFloor"
+        app:srcCompat="@drawable/greenpintwo" />
 
-    <ImageView
-        android:id="@+id/zoneNineStart"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="160dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.915"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/zoneninestartpin" />
 
-    <ImageView
-        android:id="@+id/zoneNineEnd"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginEnd="104dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/imageView2"
-        app:layout_constraintHorizontal_bias="0.959"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.518"
-        app:srcCompat="@drawable/zonenineendpin" />
 </android.support.constraint.ConstraintLayout>
