--- a/app/src/main/res/layout/activity_ground_floor_route.xml
+++ b/app/src/main/res/layout/activity_ground_floor_route.xml
@@ -23,9 +23,9 @@
         android:id="@+id/greenPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
         app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:srcCompat="@drawable/zoneonestartpin" />
+        app:srcCompat="@drawable/redpinone" />
 
     <ImageView
         android:id="@+id/redPin"
@@ -33,338 +33,6 @@
         android:layout_height="26dp"
         app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
         app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:srcCompat="@drawable/zoneoneendpin" />
+        app:srcCompat="@drawable/greenpinone" />
 
-<!--
-    <ImageView
-        android:id="@+id/zoneTwoStart"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.176"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.333"
-        app:srcCompat="@drawable/zonetwostartpin" />
-
-    <ImageView
-        android:id="@+id/zoneTwoEnd"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.175"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.411"
-        app:srcCompat="@drawable/zonetwoendpin" />
-
-    <ImageView
-        android:id="@+id/zoneThreeStart"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.28"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.329"
-        app:srcCompat="@drawable/zonethreestartpin" />
-
-    <ImageView
-        android:id="@+id/zoneThreeEnd"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.279"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.41"
-        app:srcCompat="@drawable/zonethreeendpin" />
-
-    <ImageView
-        android:id="@+id/zoneFourStart"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.471"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.441"
-        app:srcCompat="@drawable/zonefourstartpin" />
-
-    <ImageView
-        android:id="@+id/zoneFourEnd"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.545"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.442"
-        app:srcCompat="@drawable/zonefourendpin" />
-
-    <ImageView
-        android:id="@+id/zoneFiveStart"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.42"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.327"
-        app:srcCompat="@drawable/zonefivestartpin" />
-
-    <ImageView
-        android:id="@+id/zoneFiveEnd"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.594"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.341"
-        app:srcCompat="@drawable/zonefiveendpin" />
-
-    <ImageView
-        android:id="@+id/zoneSixStart"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.907"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499"
-        app:srcCompat="@drawable/zonesixstartpin" />
-
-    <ImageView
-        android:id="@+id/zoneSixEnd"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/zonesixendpin" />
-
-    <ImageView
-        android:id="@+id/zoneSevenStart"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:translationX="35px"
-        android:translationY="50px"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.711"
-        app:srcCompat="@drawable/zonesevenstartpin" />
-
-    <ImageView
-        android:id="@+id/zoneSevenEnd"
-        android:layout_width="18dp"
-        android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/groundFloorMap"
-        app:layout_constraintEnd_toEndOf="@+id/groundFloorMap"
-        app:layout_constraintHorizontal_bias="0.587"
-        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.712"
-        app:srcCompat="@drawable/zonesevenendpin" />
-
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="14dp"
-        android:layout_height="15dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="1"
-        android:textAlignment="center"
-        android:textColor="#3e890f"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.089"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.375" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="13dp"
-        android:layout_height="19dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="2"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_red_light"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.204"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.406" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="17dp"
-        android:layout_height="16dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="3"
-        android:textAlignment="center"
-        android:textColor="#304143"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.283"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.394" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="16dp"
-        android:layout_height="17dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="5"
-        android:textAlignment="center"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.588"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.347" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="11dp"
-        android:layout_height="19dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="6"
-        android:textAlignment="center"
-        android:textColor="@color/colorAccent"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.974"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="13dp"
-        android:layout_height="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="4"
-        android:textAlignment="center"
-        android:textColor="#553aa4"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.563"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
-        app:layout_constraintVertical_bias="0.516" />
-
-    <TextView
-        android:id="@+id/textView7"
-        android:layout_width="13dp"
-        android:layout_height="20dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="7"
-        android:textAlignment="center"
-        android:textColor="?android:attr/colorActivatedHighlight"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.544"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.684" />
--->
 </android.support.constraint.ConstraintLayout>
