--- a/app/src/main/res/layout/activity_two_floors_route.xml
+++ b/app/src/main/res/layout/activity_two_floors_route.xml
@@ -1,32 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".TwoFloorsRouteActivity">
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="385dp"
-        android:layout_height="511dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.466"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/thefinalemap" />
+    android:layout_height="wrap_content"
+    tools:context=".GroundFloorRouteActivity"
+    android:background="@drawable/fullmapfordesks"
+    android:id="@+id/thefinalemap"
+    >
 
 
     <ImageView
         android:id="@+id/greenPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="68dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -37,10 +28,12 @@
 
     <ImageView
         android:id="@+id/redPin"
-        android:layout_width="18dp"
+        android:layout_width="14dp"
         android:layout_height="26dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="187dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -50,4 +43,4 @@
         app:srcCompat="@drawable/greenpinthree" />
 
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
