--- a/app/src/main/res/layout/activity_ground_floor_route.xml
+++ b/app/src/main/res/layout/activity_ground_floor_route.xml
@@ -1,28 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".GroundFloorRouteActivity"
-    android:background="@drawable/groundfloor3"
-    android:id="@+id/groundFloorMap"
-    >
+    android:layout_height="match_parent"
+    tools:context=".GroundFloorRouteActivity">
 
+    <ImageView
+        android:id="@+id/groundFloorMap"
+        android:layout_width="386dp"
+        android:layout_height="584dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.64"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.272"
+        app:srcCompat="@drawable/groundfloor3" />
 
     <ImageView
         android:id="@+id/greenPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
-
         android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
         app:srcCompat="@drawable/redpinone" />
 
     <ImageView
         android:id="@+id/redPin"
         android:layout_width="18dp"
         android:layout_height="26dp"
-
+        app:layout_constraintBottom_toTopOf="@+id/groundFloorMap"
+        app:layout_constraintEnd_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintStart_toStartOf="@+id/groundFloorMap"
+        app:layout_constraintTop_toTopOf="@+id/groundFloorMap"
         app:srcCompat="@drawable/greenpinone" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
